--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -4,3 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, intial-scale=1.0, viewport-fit=cover">
 	<title>Homepage - Techium</title>
+	<meta name="description" content="Techium is a digital agency">
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">>
+	<link rel="icon" type="image/png" href="./favicon.ico">
+	</head>
+	<body></body>
+<html>
