--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
 	  <header>header</header>
-	  <main>Main content</main><footer>footer</footer>
+	  <main>Main content</main>
+	  <footer>footer</footer>
   </body>
 </html>
