--- a/0x00-html_advanced/article.html
+++ b/0x00-html_advanced/article.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     
-    <title>Homepage - Techium</title>
+    <title>Article - Techium</title>
     <meta name="description" content="Techium is a digital agency">
 
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
@@ -13,9 +13,9 @@
   </head>
   <body>
       <header>Header</header>
-      <main>
-	      <title>Article - Techium</title>
-	      <aside>Aside</aside>
+      <main>Main content
+        <aside>Aside</aside>
+
       </main>
       <footer>Footer</footer>
   </body>
